--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,3 @@
-html {
-    box-sizing: border-box;
-    font-family: 'Overpass', sans-serif;
-    font-size: 62.5%; /* 1rem = 10px*/
-}
-
-/* Basic reset */
-*,
-*::before,
-*::after {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
-}
-
 /* Header */
 .header__container {
     display: flex;
@@ -66,13 +51,12 @@ html {
 }
 
 .title__directory {
-    font-size: 3.2rem;
-    font-weight: 400;
     padding: 2.5rem 2rem;
 }
 
 .title__route {
-    font-size: 1.2rem;
+    display: flex;
+
     padding: 2.5rem 2rem;
     padding-top: 3rem;
 }
@@ -90,15 +74,11 @@ html {
     margin: 0rem 2rem;
 }
 
-.sorting__label {
-    font-size: 1.6rem;
-}
-
 .sorting__select {
-    font-size: 1.2rem;
     padding: .7rem;
     padding-right: 7rem;
     border: 1px solid rgba(192, 189, 189,.5); 
+    outline: none;
 }
 
 .items__container {
