--- a/styles/ie_support.css
+++ b/styles/ie_support.css
@@ -1,5 +1,3 @@
-@supports (display: grid) {
-
 /* Header */
 .header__container {
     display: flex;
@@ -28,9 +26,13 @@
     margin-top: 2.5rem;
     width: 90%;
 
-    display: grid;
-    grid-gap: 3rem;
-    grid-template-columns: auto 25%;
+    position: relative;
+}
+
+@supports (display: grid) {
+    .shop__inner {
+        position: initial;
+    }
 }
 
 /* Shop left part */
@@ -40,8 +42,17 @@
 
     background-color: white;
 
-    grid-row: 1/-1;
-    grid-column: 1/2;
+    float: left;
+    width: 73%;
+    height: 100%;
+}
+
+@supports (display: grid) {
+    .shop__left {
+        float: initial;
+        width: initial;
+        height: initial;
+    }
 }
 
 .title__container {
@@ -62,6 +73,7 @@
     padding: 2.5rem 2rem;
     padding-top: 3rem;
 }
+
 
 .sorting__container {
     display: flex;
@@ -84,19 +96,25 @@
 }
 
 .items__container {
-    display: grid;
-    grid-template-rows: repeat(2,auto);
-    grid-template-columns: repeat(4,auto);
-    grid-row-gap: 1.5rem;
-    grid-column-gap: 1rem;
-
     padding: 3.5rem 2rem;
     padding-bottom: 0;
-    flex-grow : 1;
+    flex-grow: 1;
 }
 
 .items__item {
     border: 1px solid rgba(192, 189, 189,.5);
+
+    float: left;
+    width: 25%;
+    height: 50%;
+}
+
+@supports (display: grid) {
+    .items__item {
+        float: initial;
+        width: initial;
+        height: initial;
+    }
 }
 
 .items__figure {
@@ -107,36 +125,44 @@
 
 /* Shop right part */
 .shop__right {
-    display: grid;
-    grid-template-rows: 8rem repeat(2,20rem) repeat(2,15rem);
-    grid-gap: 3rem;
+    float: left;
+    width: 25%;
+    margin-left: 2%;
+}
 
-    grid-row: 1/-1;
-    grid-column: 2/3;
+@supports (display: grid) {
+    .shop__right {
+        float: initial;
+        width: initial;
+        margin-left: initial;
+    }
 }
 
 .shop__right > * {
     background-color: white;
+    margin-bottom: 3rem;
 }
 
 .aside__box-1 {
-    grid-row: 1/2;
+    height: 8rem;
 }
 
-.aside__box-2 {
-    grid-row: 2/3;
+.aside__box-2, .aside__box-3 {
+    height: 20rem;
 }
 
-.aside__box-3 {
-    grid-row: 3/4;
-}
-
-.aside__box-4 { 
-    grid-row: 4/5;
+.aside__box-4, .aside__box-5 {
+    height: 15rem;
 }
 
 .aside__box-5 {
-    grid-row: 5/6;
+    margin-bottom: 0;
 }
 
+@supports (display: grid) {
+    .shop__right > * {
+        margin: 0;
+        height: initial;
+    }
 }
+
