support for ie finished

--- a/styles/ie_style.css
+++ b/styles/ie_style.css
@@ -105,8 +105,9 @@
     border: 1px solid rgba(192, 189, 189,.5);
 
     float: left;
-    width: 25%;
-    height: 50%;
+    width: 24%;
+    height: 48%;
+    margin: 1% .5% 0 .5%;
 }
 
 @supports (display: grid) {
@@ -114,6 +115,7 @@
         float: initial;
         width: initial;
         height: initial;
+        margin: 0;
     }
 }
 
