--- a/styles/default_tags.css
+++ b/styles/default_tags.css
@@ -4,6 +4,18 @@ html {
     font-size: 62.5%; 
 }
 
+@media only screen and (max-width: 1000px) {
+    html {
+      font-size: 56.25%; 
+    } 
+}
+
+@media only screen and (max-width: 600px) {
+    html {
+      font-size: 50%; 
+    } 
+} 
+
 /* Basic reset */
 *,
 *::before,
