--- a/styles/default_tags.css
+++ b/styles/default_tags.css
@@ -6,13 +6,19 @@ html {
 
 @media only screen and (max-width: 1000px) {
     html {
-      font-size: 56.25%; 
+      font-size: 56.25%; /* 9px */
     } 
 }
 
 @media only screen and (max-width: 600px) {
     html {
-      font-size: 50%; 
+      font-size: 50%; /* 8px */
+    } 
+} 
+
+@media only screen and (max-width: 400px) {
+    html {
+      font-size: 46.875%; /* 7.5px */    
     } 
 } 
 
@@ -41,6 +47,12 @@ select, option {
 a, p {
     font-size: 1.2rem;
 }
+
+@media only screen and (max-width: 600px) {
+    a, p {
+        font-size: 1.4rem;
+    }
+} 
 
 a {
     text-decoration: none;
