--- a/styles/style.css
+++ b/styles/style.css
@@ -57,6 +57,31 @@
     background-color: white;
 }
 
+.items__container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; /* flex-start */
+    height: 100%;
+
+    padding: 3.5rem 2rem;
+    padding-bottom: 1rem;
+}
+
+.items__item {
+    border: 1px solid rgba(192, 189, 189,.5);
+    height: 40rem;
+    width: 28rem;
+    /* flex-grow: 1; */
+    margin: 1rem;
+}
+
+.items__figure {
+    background-color: rgb(242,240,240);
+    min-height: 50%;
+    height: 65%;
+}
+
+
 .title__container {
     display: flex;
     justify-content: space-between;
@@ -96,30 +121,6 @@
     padding: .7rem;
     border: 1px solid rgba(192, 189, 189,.5); 
     outline: none;
-}
-
-.items__container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    height: 100%;
-
-    padding: 3.5rem 2rem;
-    padding-bottom: 1rem;
-}
-
-.items__item {
-    border: 1px solid rgba(192, 189, 189,.5);
-    height: 40rem;
-    width: 25rem;
-    flex-grow: 1;
-    margin: 1rem;
-}
-
-.items__figure {
-    background-color: rgb(242,240,240);
-    min-height: 50%;
-    height: 65%;
 }
 
 /* Shop right part */
