--- a/styles/style.css
+++ b/styles/style.css
@@ -55,10 +55,11 @@
     width: 100%;
 
     background-color: white;
+    opacity: 0.95;
 }
 
 .items__container {
-    padding: 3rem 1rem 0 1rem;
+    padding: 3rem 1rem 2rem 1rem;
 }
 
 .items__content {
@@ -69,6 +70,31 @@
 .items__item {
     padding: 1rem;
     flex: 0 1 20%;
+
+    transition: all .3s;
+    position: relative;
+}
+
+.items__item:hover {
+    transform: scale(1.075);
+    z-index: 10;
+}
+
+.items__item--sale::after {
+    content: "SALE!";
+    position: absolute;
+    top: 1rem;
+    right: 0;
+    height: 4rem;
+    width: 10rem;
+    padding: 1.2rem 2.8rem;
+    color: white;
+    background-image: linear-gradient(90deg, rgba(67,207,177,1) 21%, rgba(46,152,81,1) 100%);
+    box-shadow: 0 .5rem .5rem rgba(0,0,0,0.2);
+    z-index: 1;
+    transform: rotate(15deg);
+
+    animation: sale-wiggle 10s cubic-bezier(0.075, 0.82, 0.165, 1) 1s infinite;
 }
 
 @media only screen and (max-width: 1700px) {
@@ -106,12 +132,108 @@
 .items__border {
     border: 1px solid rgba(192, 189, 189,.5);
     height: 40rem;
+
+    box-shadow: 0 1.5rem 1rem rgba(0,0,0,0.1);
 }
 
 .items__figure {
-    background-color: rgb(242,240,240);
-    min-height: 50%;
+    background-color: rgb(112, 112, 112);
+
     height: 65%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.items__image {
+    opacity: 0.8;
+    width: 110%;
+}
+
+@supports (mix-blend-mode: multiply) {
+    .items__figure {
+        background-color: rgb(206, 206, 206);
+    }
+
+    .items__image {
+        mix-blend-mode: multiply;
+        opacity: 1;
+        width: 100%;
+    }
+}
+
+.items__details {
+    height: 35%;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.items__name {
+    width: 10rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: bold;
+}
+
+.items__price-container {
+    width: 12rem;
+    display: flex;
+}
+
+.items__price {
+    margin: 0 auto;
+}
+
+.items__item > div > div > div > .items__price--sale {
+    display: none;
+}
+
+.items__item--sale > div > div > div > .items__price--standard {
+    order: 0;
+    font-weight: normal;
+    padding-top: .25rem;
+    text-decoration: line-through;
+    font-size: 1.6rem;
+    color: grey;
+}
+
+.items__item--sale > div > div > div > .items__price--sale {
+    display: block;
+}
+
+.items__button {
+    letter-spacing: .1rem;
+    border: none;
+    padding: 1rem 2.5rem;
+    color: white;
+    background-image: linear-gradient(90deg, rgba(67,207,177,1) 21%, rgba(46,152,81,1) 100%);
+    box-shadow: 0 .5rem .5rem rgba(0,0,0,0.2);
+
+    position:relative;
+    overflow:hidden;
+} 
+
+.items__button:hover::after {
+    transform: translateX(100%);
+}
+
+.items__button::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top:0;
+    left:0;
+    background-color: white;
+    transition: all .6s cubic-bezier(0.86, 0, 0.07, 1);;
+    transform: translateX(-100%);
+    
+    clip-path: polygon(20% 0%, 100% 0%, 80% 100%, 0% 100%);
 }
 
 
@@ -160,6 +282,8 @@
 .shop__right {
     width: 32rem;
     margin-left: 3rem;
+
+    opacity: 0.95;
 
     display: flex;
     flex-direction: column;
