--- a/styles/animations.css
+++ b/styles/animations.css
@@ -28,3 +28,17 @@
         transform: rotate(15deg);
     }
 }
+
+@keyframes header-scroll {
+    0% {
+        background-position-y: 0%;
+    }
+
+    50% {
+        background-position-y: 100%;
+    }
+
+    100% {
+        background-position-y: 0%;
+    }
+}
