--- a/styles/default_tags.css
+++ b/styles/default_tags.css
@@ -4,24 +4,6 @@ html {
     font-size: 62.5%; 
 }
 
-@media only screen and (max-width: 1000px) {
-    html {
-      font-size: 56.25%; /* 9px */
-    } 
-}
-
-@media only screen and (max-width: 600px) {
-    html {
-      font-size: 50%; /* 8px */
-    } 
-} 
-
-@media only screen and (max-width: 400px) {
-    html {
-      font-size: 46.875%; /* 7.5px */    
-    } 
-} 
-
 /* Basic reset */
 *,
 *::before,
@@ -46,6 +28,11 @@ h3 {
     font-weight: bold;
 }
 
+li {
+    font-size: 1.5rem;
+    font-weight: 500;
+}
+
 label {
     font-size: 1.6rem;
 }
@@ -54,19 +41,22 @@ select, option {
     font-size: 1.2rem !important;
 }
 
-a, p {
-    font-size: 1.2rem;
+a {
+    font-size: 1.4rem;
 }
-
-@media only screen and (max-width: 600px) {
-    a, p {
-        font-size: 1.4rem;
-    }
-} 
 
 a {
     text-decoration: none;
     color: inherit;
+}
+
+a:hover {
+    color: rgba(46,152,81,1);
+    transform: scale(1.1);
+}
+
+p {
+    font-size: 1.6rem;
 }
 
 button:hover, button:focus {
@@ -80,3 +70,34 @@ button {
 button:active {
     transform: scale(0.9);
 }
+
+input:active, input:focus {
+    outline: none;
+    border: 2px solid rgba(46,152,81,.5);
+    opacity: 1;
+}
+
+@media only screen and (max-width: 1000px) {
+    html {
+      font-size: 56.25%; /* 9px */
+    } 
+}
+
+@media only screen and (max-width: 600px) {
+    html {
+      font-size: 50%; /* 8px */
+    } 
+} 
+
+@media only screen and (max-width: 400px) {
+    html {
+      font-size: 46.875%; /* 7.5px */    
+    } 
+} 
+
+@media only screen and (max-width: 600px) {
+
+    a, p {
+        font-size: 1.8rem;
+    }
+} 
