--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,12 @@
     justify-content: flex-end;
 
     height: 20rem;
-    background-color: rgb(20,20,20);
+
+    background-image: url('../images/header.jpeg');
+    background-size: 100%;
+    background-position-y: 0%;
+
+    animation: header-scroll 100s linear infinite;
 }
 
 @media only screen and (max-width: 400px) {
@@ -16,7 +21,53 @@
 
 .header__nav {
     height: 6rem;
-    background-color: black
+    background-color: black;
+    display: flex;
+    align-items: center;
+}
+
+.nav__container {
+    display: flex; 
+    justify-content: flex-start;
+    align-items: center;
+    width: 90%;
+    margin: 0 auto;
+    list-style-type: none;
+}
+
+.nav__item {
+    color: white;
+    padding: .8rem 2.5rem .2rem 2.5rem;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+}
+
+.nav__item {
+    transition: all .4s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.nav__item:active {
+    transform: scale(0.9);
+}
+
+@supports (clip-path: polygon(20% 0%, 100% 0%, 80% 100%, 0% 100%)) {
+    .nav__item:hover::after {
+        transform: translateX(100%);
+    }
+    
+    .nav__item::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top:0;
+        left:0;
+        background-color: white;
+        transition: all .6s cubic-bezier(0.86, 0, 0.07, 1);;
+        transform: translateX(-100%);
+        clip-path: polygon(20% 0%, 100% 0%, 80% 100%, 0% 100%);
+    }
 }
 
 /* Shop */
@@ -62,9 +113,11 @@
     padding: 3rem 1rem 2rem 1rem;
 }
 
-.items__content {
-    display: flex;
-    flex-wrap: wrap;
+@supports (flex: 0 1 20%) {
+    .items__content {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 
 .items__item {
@@ -73,7 +126,62 @@
 
     transition: all .3s;
     position: relative;
+
+    float: left;
+    width: 20%;
 }
+
+@media only screen and (max-width: 1700px) {
+    .items__item {
+        flex: 0 1 25%;
+
+        float: left;
+        width: 25%;
+    }
+}
+
+@media only screen and (max-width: 1200px) {
+    .items__item {
+        flex: 0 1 33.33%;
+
+        float: left;
+        width: 33.33%;
+    }
+}
+
+@media only screen and (max-width: 748px) {
+    .items__item {
+        flex: 0 1 49.99%;
+
+        float: left;
+        width: 49.99%;
+    }
+
+    .items__item:last-child {
+        padding-bottom: 2rem;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    .items__item {
+        flex: 0 1 100%;
+
+        float: left;
+        width: 100%;
+    }
+
+    .items__item:last-child {
+        padding-bottom: 2rem;
+    }
+}
+
+@supports (flex: 0 1 20%) {
+    .items__item {
+        float: initial;
+        width: initial;
+    }
+}
+
 
 .items__item:hover {
     transform: scale(1.075);
@@ -95,38 +203,6 @@
     transform: rotate(15deg);
 
     animation: sale-wiggle 10s cubic-bezier(0.075, 0.82, 0.165, 1) 1s infinite;
-}
-
-@media only screen and (max-width: 1700px) {
-    .items__item {
-        flex: 0 1 25%;
-    }
-}
-
-@media only screen and (max-width: 1200px) {
-    .items__item {
-        flex: 0 1 33.33%;
-    }
-}
-
-@media only screen and (max-width: 748px) {
-    .items__item {
-        flex: 0 1 49.99%;
-    }
-
-    .items__item:last-child {
-        padding-bottom: 2rem;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-    .items__item {
-        flex: 0 1 100%;
-    }
-
-    .items__item:last-child {
-        padding-bottom: 2rem;
-    }
 }
 
 .items__border {
@@ -218,25 +294,6 @@
     overflow:hidden;
 } 
 
-.items__button:hover::after {
-    transform: translateX(100%);
-}
-
-.items__button::after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top:0;
-    left:0;
-    background-color: white;
-    transition: all .6s cubic-bezier(0.86, 0, 0.07, 1);;
-    transform: translateX(-100%);
-    
-    clip-path: polygon(20% 0%, 100% 0%, 80% 100%, 0% 100%);
-}
-
-
 .title__container {
     display: flex;
     justify-content: space-between;
@@ -311,30 +368,17 @@
 
 @media only screen and (max-width: 400px) {
     .shop__right {
-        padding: 2rem;
-        padding-top: 0;
+        padding: 0 2rem;
     }
 }
 
 .shop__right > * {
     background-color: white;
     margin-bottom: 3rem;
-}
-
-.aside__box-1 {
-    height: 8rem;
-}
-
-.aside__box-2, .aside__box-3 {
-    height: 20rem;
-}
-
-.aside__box-4, .aside__box-5 { 
-    height: 15rem;
-}
-
-.aside__box-5 {
-    margin-bottom: 0;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -343,13 +387,8 @@
         margin: 0 auto 3rem auto;
     }
 
-    .aside__box-2, .aside__box-3{
+    .aside__box-2, .aside__box-3, .aside__box-4, .aside__box-5{
         width: 48%;
-    }
-
-    .aside__box-4, .aside__box-5 {
-        width: 48%;
-        margin-bottom: 0;
     }
 } 
 
@@ -357,4 +396,48 @@
     .shop__right > * {
         width: 100%;
     }
+}
+
+.aside__input {
+    width: 100%;
+    height: 3rem;
+    padding: 0 1rem;
+    font-size: 1.6rem;
+    background-color: white;
+    border-radius: 4px;
+    border: 1.5px solid rgb(192, 189, 189);
+    opacity: 0.75;
+}
+
+.aside__title {
+    padding-bottom: 1.5rem;
+}
+
+.aside__break {
+    border:none;
+    border-top: 1.5px dotted black;
+    width:100%;
+}
+
+.aside__texts-container {
+    padding-top: 1.5rem;
+
+    display:flex;
+    flex-direction: column;
+}
+
+.aside__text {
+    padding: .3rem 0;
+    cursor: pointer;   
+
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding-right: 1rem;
+}
+
+.aside__text:hover {
+    color: rgba(46,152,81,1);
+    transform: scale(1.05);
+    transform-origin: 0%;
 }
