--- a/styles/animations.css
+++ b/styles/animations.css
@@ -42,3 +42,13 @@
         background-position-y: 0%;
     }
 }
+
+@keyframes nav-button-shine {
+    0% {
+        transform: translateX(-100%);
+    }
+
+    100% {
+        transform: translateX(100%);
+    }
+}
