--- a/styles/style.css
+++ b/styles/style.css
@@ -36,8 +36,11 @@
 }
 
 .nav__item {
+    width: 100%;
+    text-align: center;
+    padding: .8rem 0 .2rem 0;
+    width: 15rem;
     color: white;
-    padding: .8rem 2.5rem .2rem 2.5rem;
     cursor: pointer;
     position: relative;
     overflow: hidden;
@@ -51,9 +54,13 @@
     transform: scale(0.9);
 }
 
+.nav__item:hover {
+    color: rgb(67,207,177);
+}
+
 @supports (clip-path: polygon(20% 0%, 100% 0%, 80% 100%, 0% 100%)) {
     .nav__item:hover::after {
-        transform: translateX(100%);
+        animation: nav-button-shine .8s cubic-bezier(1, 0, 0, 1);
     }
     
     .nav__item::after {
@@ -64,9 +71,8 @@
         top:0;
         left:0;
         background-color: white;
-        transition: all .6s cubic-bezier(0.86, 0, 0.07, 1);;
+        clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
         transform: translateX(-100%);
-        clip-path: polygon(20% 0%, 100% 0%, 80% 100%, 0% 100%);
     }
 }
 
@@ -121,7 +127,7 @@
 }
 
 .items__item {
-    padding: 1rem;
+    padding: .5rem;
     flex: 0 1 20%;
 
     transition: all .3s;
@@ -182,7 +188,6 @@
     }
 }
 
-
 .items__item:hover {
     transform: scale(1.075);
     z-index: 10;
@@ -205,11 +210,10 @@
     animation: sale-wiggle 10s cubic-bezier(0.075, 0.82, 0.165, 1) 1s infinite;
 }
 
-.items__border {
+.items__item > div {
     border: 1px solid rgba(192, 189, 189,.5);
-    height: 40rem;
-
     box-shadow: 0 1.5rem 1rem rgba(0,0,0,0.1);
+    height: 40rem;
 }
 
 .items__figure {
@@ -292,7 +296,18 @@
 
     position:relative;
     overflow:hidden;
+
+    transition: all .4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    cursor: pointer;
 } 
+
+.items__button:active {
+    transform: scale(0.9);
+}
+
+.items__button:hover {
+    background-image: linear-gradient(90deg,rgba(46,152,81,1) 21%, rgba(46,152,81,1) 100%);
+}
 
 .title__container {
     display: flex;
@@ -333,6 +348,7 @@
     padding: .7rem;
     border: 1px solid rgba(192, 189, 189,.5); 
     outline: none;
+    cursor: pointer;
 }
 
 /* Shop right part */
@@ -438,6 +454,4 @@
 
 .aside__text:hover {
     color: rgba(46,152,81,1);
-    transform: scale(1.05);
-    transform-origin: 0%;
 }
