--- a/styles/style.css
+++ b/styles/style.css
@@ -290,12 +290,12 @@
     letter-spacing: .1rem;
     border: none;
     padding: 1rem 2.5rem;
+    box-shadow: 0 .5rem .5rem rgba(0,0,0,0.2);
     color: white;
     background-image: linear-gradient(90deg, rgba(67,207,177,1) 21%, rgba(46,152,81,1) 100%);
-    box-shadow: 0 .5rem .5rem rgba(0,0,0,0.2);
+    background-color: none;
 
     position:relative;
-    overflow:hidden;
 
     transition: all .4s cubic-bezier(0.075, 0.82, 0.165, 1);
     cursor: pointer;
@@ -306,7 +306,19 @@
 }
 
 .items__button:hover {
-    background-image: linear-gradient(90deg,rgba(46,152,81,1) 21%, rgba(46,152,81,1) 100%);
+    color: rgba(46,152,81,1);
+    background-image: none;
+    background-color: white;
+}
+
+.items__button:hover:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 1px solid rgba(46,152,81,1);
 }
 
 .title__container {
@@ -431,7 +443,7 @@
 
 .aside__break {
     border:none;
-    border-top: 1.5px dotted black;
+    border-top: 2px dotted black;
     width:100%;
 }
 
