--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -90,3 +90,8 @@
     background-color: white;
     border: 1px solid rgba(46,152,81,1);
 }
+
+.form__delete {
+    width: 50px;
+    height: 50px;
+}
