--- a/public/styles/admin.css
+++ b/public/styles/admin.css
@@ -80,9 +80,7 @@
     transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.form__button:active {
-    transform: scale(0.9);
-}
+
 
 .form__button:hover {
     color: rgba(46,152,81,1);
@@ -92,6 +90,25 @@
 }
 
 .form__delete {
-    width: 50px;
-    height: 50px;
+    padding: 2rem 2.5rem;
+    width: 15rem;
+    height: 6rem;
+    margin: 5rem 1rem 1rem 1rem;
+    background-color: black;
+    letter-spacing: .1rem;
+    border: none;
+    color: white;
+    cursor: pointer;
+    transition: all 0.4s cubic-bezier(0.075, 0.82, 0.165, 1);
+    text-transform: uppercase;
+}
+
+.form__delete:hover {
+    color: black;
+    background-color: white;
+    border: 1px solid black;
+}
+
+.form__button:active, .form__delete:active {
+    transform: scale(0.9);
 }
