--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -219,16 +219,15 @@
 .items__edit {
     display: none;
     position: absolute;
-    top: 1rem;
-    left: 1rem;
-    height: 4rem;
-    width: 4rem;
-    background-image: linear-gradient(90deg, rgba(67,207,177,1) 21%, rgba(46,152,81,1) 100%);
+    top: 2rem;
+    left: 2rem;
+    height: 3rem;
+    width: 3rem;
+    background-color: rgb(29, 29, 29);
     color: white;
-    border: 1px solid white;
     font-size: 1.2rem;
     text-align: center;
-    line-height: 4rem;
+    line-height: 3.4rem;
     z-index: 40;
     cursor: pointer;
 }
@@ -570,6 +569,7 @@
         height: 6rem;
         width: 6rem;
         border-radius: 100%;
+        line-height: initial;
     }
 
     .admin__new-item::after {
